src/test/deca/syntax/invalid/sansobjet/Inf1.deca
//Inf1.deca:5:10: mismatched input ';' expecting {STRING,
//Description:  inf sans droite
//Resultat: Erreur ligne 5
{
    12 <  ;
}
